--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
     </queries>
 
     <application
-        android:label="Pawanputra"
+        android:label="Diginet Solution"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
 
